Terraform/ecs-sg.tf
resource "aws_security_group" "ecs_sg" {
  name        = "Myapp-ECS-SG"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = var.container_port
    to_port     = var.container_port
    protocol    = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
